cabal-version:       2.2

name:                mydig
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mydig#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable mydig
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       mydig, base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

library
  exposed-modules: Message,Transport
  hs-source-dirs: src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , bytestring >=0.11 && <0.13
    , network >=3.1 && <3.3
    , text >=2.0 && <2.2
    , mtl >= 2.2 && < 2.4
    , containers >= 0.7 && < 0.8
  default-language: Haskell2010
